# MinervaS

./: README.md
Fuzzy/: fuzzy_sim.py
MeteoAPI/: README.md  imports.py
ODHconnector/: README.md  Spiegazione.md  pyproject.toml  requirements.txt
ODHconnector/demos/: dashboard.py  demo_combined_map.py  demo_incidents.py  demo_traffic_map.py  demo_weather_map.py  fuzzy.py  live_monitoring.py  traffic.py  traffic_only.py
ODHconnector/demos/dashboards/: combined_map.html
ODHconnector/demos/web-demo/: combined_map.html  traffic_map(0.1km).html  traffic_map(2km).html  traffic_map.html  weather_map.html
ODHconnector/docs/: Makefile  conf.py  index.rst  modules.rst
ODHconnector/docs/_build/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
ODHconnector/docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree
ODHconnector/src/ODHconnector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ODHconnector/src/odhconnector/: __init__.py  models.py  utils.py
ODHconnector/src/odhconnector/adapters/: traffic_adapter.py  weather_adapter.py
ODHconnector/src/odhconnector/connectors/: connector.py
ODHconnector/src/odhconnector/risk/: README.md  config.yaml  fuzzy_engine.py  membership.py
ODHconnector/tests/: TESTING.md  test_connector_alerts_and_scores.py  test_connector_features.py  test_connector_filter_and_summary.py  test_connector_route_utils.py  test_connector_weather.py  test_fuzzy_engine.py  test_incidents_live.py  test_sanity.py
TargetX/: README.md
(+45 files in other folders)
